--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 
     <script src="js/common.js"></script>
 </head>
-<body>
+<body onblur="onBlur()" onfocus="onFocus()">
 <div class="content grid">
     <section class="list grid">
         <div class="search-bar grid">
