--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Онлайн-чат">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/main.css">
-
+    <script src="js/notify.js"></script>
     <script src="js/common.js"></script>
 </head>
 <body onblur="onBlur()" onfocus="onFocus()">
