--- a/client/pages/chat_new.html
+++ b/client/pages/chat_new.html
@@ -45,7 +45,7 @@
             <div class="search">
                 <span class="input input_main-search">
     				<input class="input-field input-field_main-search" type="text" autocomplete="off" id="sidebar-search" />
-    				<label class="input-label input-label_main-search input-label_main-search-color-1" for="sidebar-search">
+    				<label class="input-label input-label_main-search" for="sidebar-search">
     					<span class="input-label-content input-label-content_main-search">Поиск</span>
     				</label>
     			</span>
