Небольшие фиксы формы авторизации

--- a/client/pages/auth.html
+++ b/client/pages/auth.html
@@ -36,7 +36,7 @@
                                 maxlength=24
                                 required />
                             <label class="input-label input-label_transparent">
-                            <span class="input-label-content input-label-content_transparent">Логин</span>
+                                <span class="input-label-content input-label-content_transparent">Логин</span>
                             </label>
                         </span>
 
@@ -48,16 +48,16 @@
                                 maxlength=30
                                 required />
                             <label class="input-label input-label_transparent">
-                            <span class="input-label-content input-label-content_transparent">Пароль</span>
+                                <span class="input-label-content input-label-content_transparent">Пароль</span>
                             </label>
                         </span>
 
                         <span class="input input_transparent">
-                            <a class="button button-accent button-big" href="#" onclick="auth(event);" id="sign-up">Войти</a>
+                            <a class="button button-accent button-big" href="#" onclick="auth(event);" id="sign-in">Войти</a>
                         </span>
 
                         <span class="input input_transparent">
-                            <a class="button button-accent button-big button-solid" href="#" onclick="flip();" id="sign-in">Регистрация</a>
+                            <a class="button button-accent button-big button-solid" href="#" onclick="flip();">Регистрация</a>
                         </span>
                         <button type="submit" style="display: none;" id="signin-submit"></button>
                     </form>
@@ -77,7 +77,7 @@
                                 maxlength=24
                                 required />
                             <label class="input-label input-label_transparent">
-                            <span class="input-label-content input-label-content_transparent">Логин</span>
+                                <span class="input-label-content input-label-content_transparent">Логин</span>
                             </label>
                         </span>
 
@@ -89,7 +89,7 @@
                                 maxlength=30
                                 required />
                             <label class="input-label input-label_transparent">
-                            <span class="input-label-content input-label-content_transparent">Пароль</span>
+                                <span class="input-label-content input-label-content_transparent">Пароль</span>
                             </label>
                         </span>
 
@@ -101,7 +101,7 @@
                                 maxlength=30
                                 required />
                             <label class="input-label input-label_transparent">
-                            <span class="input-label-content input-label-content_transparent">Подтверждение пороля</span>
+                                <span class="input-label-content input-label-content_transparent">Подтверждение пороля</span>
                             </label>
                         </span>
 
@@ -110,7 +110,7 @@
                         </span>
 
                         <span class="input input_transparent">
-                            <a class="button button-accent button-big button-solid" href="#" onclick="flip();" id="sign-in">Уже есть аккаут?</a>
+                            <a class="button button-accent button-big button-solid" href="#" onclick="flip();">Уже есть аккаут?</a>
                         </span>
                         <button type="submit" style="display: none;" id="signup-submit"></button>
                     </form>
