Обновлен адрес запроса у форм

--- a/client/pages/auth.html
+++ b/client/pages/auth.html
@@ -32,7 +32,7 @@
                         Gist<span>`</span>
                     </span>
 
-                    <form action="/api/login" id="signin-form" method="post">
+                    <form action="/api/user/signin" id="signin-form" method="post">
                         <span class="input input_transparent">
                             <input class="input-field input-field_transparent"
                                 type="text"
@@ -73,7 +73,7 @@
                         Gist<span>`</span>
                     </span>
 
-                    <form action="/api/reg" id="signup-form" method="post">
+                    <form action="/api/user/signup" id="signup-form" method="post">
                         <span class="input input_transparent">
                             <input class="input-field input-field_transparent"
                                 type="text"
