Исправлен путь к скриптам

--- a/client/pages/chat_new.html
+++ b/client/pages/chat_new.html
@@ -15,8 +15,7 @@
     <link rel="image_src" href="" /> <!-- TODO -->
 
     <link rel="stylesheet" href="../css/main.css">
-    <script src="../js/common.js"></script>
-    <script src="../js/chat.js"></script>
+    <script src="../js/scripts.min.js"></script>
 </head>
 
 <body>
