Обновлен html страниц
auth.html:
- изменен путь к файлу с JS

chat.html:
- полностью обновлена верстка

--- a/client/pages/auth.html
+++ b/client/pages/auth.html
@@ -124,6 +124,6 @@
         </div>
     </div>
 
-    <script src="../js/common.js"></script>
+    <script src="../js/scripts.min.js"></script>
 </body>
 </html>
