Обновлены скрипты авторизации
Co-authored-by: sk8bored <bakhmetyevgv@gmail.com>

--- a/client/pages/auth.html
+++ b/client/pages/auth.html
@@ -39,7 +39,7 @@
               <span class="input input_transparent">
                 <input class="input-field input-field_transparent"
                   type="text"
-                  name="user-in[login]"
+                  id="in-login"
                   minlength=4
                   maxlength=15
                   required />
@@ -51,7 +51,7 @@
               <span class="input input_transparent">
                 <input class="input-field input-field_transparent"
                   type="password"
-                  name="user-in[password]"
+                  id="in-password"
                   minlength=4
                   maxlength=30
                   required />
@@ -61,7 +61,7 @@
               </span>
 
               <span class="input input_transparent">
-                <a class="button button-accent button-big" href="#" onclick="auth(event);" id="sign-in">Войти</a>
+                <a class="button button-accent button-big" href="#" id="sign-in">Войти</a>
               </span>
 
               <span class="input input_transparent">
@@ -80,7 +80,7 @@
               <span class="input input_transparent">
                 <input class="input-field input-field_transparent"
                   type="text"
-                  name="user-up[login]"
+                  id="up-login"
                   minlength=4
                   maxlength=15
                   required />
@@ -92,7 +92,7 @@
               <span class="input input_transparent">
                 <input class="input-field input-field_transparent"
                   type="password"
-                  name="user-up[password]"
+                  id="up-password"
                   minlength=4
                   maxlength=30
                   required />
@@ -104,7 +104,7 @@
               <span class="input input_transparent">
                 <input class="input-field input-field_transparent"
                   type="password"
-                  name="user-up[confirm]"
+                  id="up-confirm"
                   minlength=4
                   maxlength=30
                   required />
@@ -114,7 +114,7 @@
               </span>
 
               <span class="input input_transparent">
-                <a class="button button-accent button-big" href="#" onclick="auth(event);" id="sign-up">Зарегистрироваться</a>
+                <a class="button button-accent button-big" href="#" id="sign-up">Зарегистрироваться</a>
               </span>
 
               <span class="input input_transparent">
