--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -196,7 +196,7 @@
 
 
           <div class="btn-box">
-            <a class="btn-box__icon" id="ph" onclick="func()">
+            <a class="btn-box__icon" id="phоto-btn" onclick="func()">
                 <img src="img/icons/attachment.png" alt="Добавить вложение">
             </a>
             <input type="file" id="dialog_window" name="photo" multiple accept="image/*, image/jpeg">
