Изменены стили у  sidebar, header, chat-footer
Co-authored-by: bulletmys <bulletmys@yandex.ru>
Co-authored-by: sk8bored <bakhmetyevgv@gmail.com>

--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -191,7 +191,8 @@
 
         <div class="chat__footer">
           <div class="msg-box">
-            <input type="text" class="msg-box__input">
+            <input type="text" class="msg-box__input"
+              placeholder="Введите сообщение...">
           </div>
 
           <div class="btn-box">
