Обновлен логотип на странице авторизации
Co-authored-by: AntonRostetskiy <antonrostetskiy@gmail.com>

--- a/client/pages/auth.html
+++ b/client/pages/auth.html
@@ -40,7 +40,7 @@
         <div class="flip__content">
           <div class="flip__content_front auth auth_signin">
             <div class="auth__logo">
-              <span>Gist<b>`</b><span>
+              <img src="img/logo/logo-full-right.png" class="logo">
             </div>
 
             <form class="auth__signin-form">
@@ -81,7 +81,7 @@
 
           <div class="flip__content_back auth auth_signup">
             <div class="auth__logo">
-              <span>Gist<b>`</b><span>
+              <img src="img/logo/logo-full-right.png" class="logo">
             </div>
 
             <form class="auth__signup-form">
