Исправлен баг со скриптами

--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -163,6 +163,17 @@
       </div>
 
       <div class="chat">
+        <div class="chat__header">
+          <div class="message-search">
+            <button class="s-btn" id="sbttn">
+              <span class="hovertext">Поиск по чату</span>
+            </button>
+            <input class="chat-search__input" type="search" id="s-input" placeholder="Поиск по истории сообщений"/>
+            <button class="chat-seach__run" id="s-go">Поиск</button>
+            <button class="chat-seach__cancel" id="s-cancel">Отмена</button>
+          </div>
+        </div>
+        
         <ul class="chat__dialogs-list">
           <li class="chat__dialog chat__dialog_active">
             <ul class="dialog">
