Добавлен скрипт к окну поиска

--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -165,8 +165,8 @@
       <div class="chat">
         <div class="chat__header">
           <div class="message-search">
-            <input class="chat-search__input" type="search" id="s-input" placeholder="Поиск по истории сообщений"/>
-            <button class="chat-seach__run" id="s-go">Поиск</button>
+            <input class="chat-search__input" type="search" id="myDiv" placeholder="Поиск по истории сообщений"/>
+            <button class="chat-seach__run" id="s-go" onclick="goSearch()">Поиск</button>
           </div>
         </div>
         
