--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="content">
-      <button id="myBtn" type="button" name="button">Создать диалог</button>
+      <button id="dlg-conv-open" type="button" name="button">Создать диалог</button>
 
       <div class="sidebar">
         <div class="sidebar-search">
@@ -54,189 +54,13 @@
         </div>
 
         <ul class="dialogs-list">
-          <li class="dialogs-list__dlg dialogs-list__dlg_newest" onclick="switchDialog(event, '1');">
-            <a class="dlg-item">
-              <div class="dlg-item__meta">
-                21:50
-              </div>
 
-              <div class="dlg-item__photo">
-                <img src="img/user.jpg" alt="" class="dlg-item__photo-img">
-              </div>
-
-              <div class="dlg-item__msg-wrap">
-                <div class="dlg-item__peer">
-                  <span class="dlg-item__title">
-                    Брендан Эйх
-                  </span>
-                </div>
-
-                <div class="dlg-item__msg">
-                  <span class="dlg-item__short-text">
-                    Привет! Как дела?
-                  </span>
-                </div>
-              </div>
-
-              <div class="dlg-item__label">
-                5
-              </div>
-            </a>
-          </li>
-
-          <li class="dialogs-list__dlg dialogs-list__dlg_newest" onclick="switchDialog(event, '2');">
-            <a class="dlg-item">
-              <div class="dlg-item__meta">
-                21:50
-              </div>
-
-              <div class="dlg-item__photo">
-                <img src="img/user.jpg" alt="" class="dlg-item__photo-img">
-              </div>
-
-              <div class="dlg-item__msg-wrap">
-                <div class="dlg-item__peer">
-                  <span class="dlg-item__title">
-                    Брендан Эйх
-                  </span>
-                </div>
-
-                <div class="dlg-item__msg">
-                  <span class="dlg-item__short-text">
-                    Привет! Как дела?
-                  </span>
-                </div>
-              </div>
-            </a>
-          </li>
-
-          <li class="dialogs-list__dlg">
-            <a class="dlg-item">
-              <div class="dlg-item__meta">
-                21:50
-              </div>
-
-              <div class="dlg-item__photo">
-                <img src="img/user.jpg" alt="" class="dlg-item__photo-img">
-              </div>
-
-              <div class="dlg-item__msg-wrap">
-                <div class="dlg-item__peer">
-                  <span class="dlg-item__title">
-                    Брендан Эйх
-                  </span>
-                </div>
-
-                <div class="dlg-item__msg">
-                  <span class="dlg-item__short-text">
-                    Привет! Как дела?
-                  </span>
-                </div>
-              </div>
-            </a>
-          </li>
-
-          <li class="dialogs-list__dlg">
-            <a class="dlg-item">
-              <div class="dlg-item__meta">
-                21:50
-              </div>
-
-              <div class="dlg-item__photo">
-                <img src="img/user.jpg" alt="" class="dlg-item__photo-img">
-              </div>
-
-              <div class="dlg-item__msg-wrap">
-                <div class="dlg-item__peer">
-                  <span class="dlg-item__title">
-                    Брендан Эйх
-                  </span>
-                </div>
-
-                <div class="dlg-item__msg">
-                  <span class="dlg-item__short-text">
-                    Привет! Как дела?
-                  </span>
-                </div>
-              </div>
-            </a>
-          </li>
         </ul>
       </div>
 
       <div class="chat">
         <ul class="chat-list">
-          <li class="chat-list__item" id="1">
-            <ul class="chat__dialogs-list">
-              <li class="chat__dialog chat__dialog_active">
-                <ul class="dialog">
-                  <li class="dialog__meta">
-                    <span>Сегодня</span>
-                  </li>
 
-                  <li class="dialog__wrap-msg dialog__wrap-msg_incoming">
-                    <div class="dialog__msg dialog__msg_incoming">
-                      <span class="dialog__msg-text">
-                        Привет! Идешь на пары сегодня?
-                      </span>
-                    </div>
-
-                    <div class="dialog__msg-meta">
-                      <span>15:42</span>
-                    </div>
-                  </li>
-
-                  <li class="dialog__wrap-msg dialog__wrap-msg_sent">
-                    <div class="dialog__msg dialog__msg_sent">
-                      <span class="dialog__msg-text">
-                        Неа, лень :)
-                      </span>
-                    </div>
-
-                    <div class="dialog__msg-meta dialog__msg-meta_sent">
-                      <span>15:42</span>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-
-          <li class="chat-list__item" id="2">
-            <ul class="chat__dialogs-list">
-              <li class="chat__dialog chat__dialog_active">
-                <ul class="dialog">
-                  <li class="dialog__meta">
-                    <span>Вчера</span>
-                  </li>
-
-                  <li class="dialog__wrap-msg dialog__wrap-msg_incoming">
-                    <div class="dialog__msg dialog__msg_incoming">
-                      <span class="dialog__msg-text">
-                        Привет! Идешь на пары сегодня?
-                      </span>
-                    </div>
-
-                    <div class="dialog__msg-meta">
-                      <span>15:42</span>
-                    </div>
-                  </li>
-
-                  <li class="dialog__wrap-msg dialog__wrap-msg_sent">
-                    <div class="dialog__msg dialog__msg_sent">
-                      <span class="dialog__msg-text">
-                        Неа, лень :)
-                      </span>
-                    </div>
-
-                    <div class="dialog__msg-meta dialog__msg-meta_sent">
-                      <span>15:42</span>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li>
         </ul>
 
         <div class="chat__footer">
@@ -261,12 +85,11 @@
 
       </div>
 
-      <div id="myModal" class="modal">
+      <div id="dlg-conv-modal" class="modal">
         <div class="modal-content">
-          <span class="close">&times;</span>
-
           <span class="input input_primary">
             <input class="input-field input-field_primary"
+              id="dlg-conv-title"
               type="text"
               minlength=1
               maxlength=20
@@ -278,6 +101,18 @@
 
           <span class="input input_primary">
             <input class="input-field input-field_primary"
+              id="dlg-conv-description"
+              type="text"
+              minlength=4
+              required />
+            <label class="input-label input-label_primary">
+              <span class="input-label-content input-label-content_primary">Описание</span>
+            </label>
+          </span>
+
+          <span class="input input_primary">
+            <input class="input-field input-field_primary"
+              id="dlg-conv-members"
               type="text"
               minlength=4
               required />
@@ -287,11 +122,11 @@
           </span>
 
           <span class="input input_transparent">
-            <a class="button button-accent button-big" href="#">Создать</a>
+            <a class="button button-accent button-big" id="dlg-conv-btn-create">Создать</a>
           </span>
 
           <span class="input input_transparent">
-            <a class="button button-accent button-big button-solid" href="#">Отменить</a>
+            <a class="button button-accent button-big button-solid" id="dlg-conv-btn-cancel">Отменить</a>
           </span>
         </div>
       </div>
