Разделение на скрипты для авторизации и чата

--- a/client/pages/auth.html
+++ b/client/pages/auth.html
@@ -24,7 +24,7 @@
 
   <link rel="stylesheet" href="css/auth.min.css">
 
-  <script src="js/scripts.min.js"></script>
+  <script src="js/auth.min.js"></script>
 </head>
 
 <body>
