--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Content-language" content="ru"/>
+  <meta http-equiv="Content-language" content="ru" />
 
   <title>Gist` — Онлайн-чат</title>
   <meta name="description" content="Учебный проект МГТУ им. Баумана ИУ9 первого курса 2018 г. — онлайн-чат на Node.js">
@@ -20,7 +20,8 @@
   <link rel="manifest" href="img/favicon/site.webmanifest">
   <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
 
-  <link rel="image_src" href="" /> <!-- TODO -->
+  <link rel="image_src" href="" />
+  <!-- TODO -->
 
   <link rel="stylesheet" href="css/main.min.css">
 
@@ -165,11 +166,16 @@
       <div class="chat">
         <div class="chat__header">
           <div class="message-search">
-            <input class="chat-search__input" type="search" id="myDiv" placeholder="Поиск по истории сообщений"/>
-            <button class="chat-seach__run" id="s-go" onclick="goSearch()">Поиск</button>
+            <input class="chat-search__input" type="search" id="myDiv" placeholder="Поиск по истории сообщений" />
+            <div class="sbtn-box">
+              <button class="chat-seach__run" id="s-go" onclick="goSearch()"></button>
+            </div>
+            <div class="cbtn-box">
+              <button class="chat-seach__end" onclick="endSearch(); document.getElementById('myDiv').value = '';"></button>
+            </div>
           </div>
         </div>
-        
+
         <ul class="chat__dialogs-list">
           <li class="chat__dialog chat__dialog_active">
             <ul class="dialog">
@@ -206,8 +212,7 @@
 
         <div class="chat__footer">
           <div class="msg-box">
-            <input type="text" class="msg-box__input"
-              placeholder="Введите сообщение...">
+            <input type="text" class="msg-box__input" placeholder="Введите сообщение...">
           </div>
 
           <div class="btn-box">
