Улучшено оформление модального окна

--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -85,7 +85,7 @@
 
       </div>
 
-      <div id="dlg-conv-modal" class="modal">
+      <div id="dlg-conv-modal" class="modal modal_conv">
         <div class="modal-content">
           <span class="input input_primary">
             <input class="input-field input-field_primary"
