--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -43,6 +43,10 @@
           <span>Gist`</span>
         </div>
       </div>
+
+      <div class="header-settings">
+        <a class="header-settings__link"><i class="fas fa-cog"></i></a>
+      </div>
     </div>
 
     <div class="content">
@@ -131,6 +135,20 @@
         </div>
       </div>
 
+      <div id="settings-modal" class="modal modal_set">
+        <div class="modal-content">
+          <span class="settings__label">
+            Тема оформления:
+          </span>
+
+          <div class="setm-themes">
+            <a class="button button-solid" id="dlg-conv-btn-create" onclick="changeStyle('light');">Светлая</a>
+            <a class="button button-solid" id="dlg-conv-btn-create">Цветная</a>
+            <a class="button button-solid" id="dlg-conv-btn-create" onclick="changeStyle('dark');">Темная</a>
+            <a class="button button-solid" id="dlg-conv-btn-create" onclick="changeStyle('dark-blue');">Темно-синяя</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
