Добавлена кнопка создания диалога

--- a/client/pages/chat.html
+++ b/client/pages/chat.html
@@ -50,8 +50,6 @@
     </div>
 
     <div class="content">
-      <button id="dlg-conv-open" type="button" name="button">Создать диалог</button>
-
       <div class="sidebar">
         <div class="sidebar-search">
           <input type="search" class="sidebar-search__input" placeholder="Поиск">
@@ -60,6 +58,10 @@
         <ul class="dialogs-list">
 
         </ul>
+
+        <span class="sidebar__btn">
+          <a class="button button-accent button-big button-circle" id="dlg-conv-open"><i class="fas fa-plus"></i></a>
+        </span>
       </div>
 
       <div class="chat">
